# crypto-futures-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  GEMINI.md  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  run_research.sh
.gemini/: settings.json
.github/workflows/: common.yml  main.yml  non-main-ci.yml
src/crypto_futures_bot/: constants.py  introspection.py  main.py
src/crypto_futures_bot/config/: configuration_properties.py  container.py  dependencies.py
src/crypto_futures_bot/domain/: types.py
src/crypto_futures_bot/domain/enums/: __init__.py  candlestick_enum.py  market_action_type_enum.py  market_signal_type_enum.py  open_position_result_type_enum.py  position_open_type_enum.py  position_type_enum.py  push_notification_type_enum.py  task_type_enum.py
src/crypto_futures_bot/domain/vo/: __init__.py  auto_trader_crypto_currency_item.py  candlestick_indicators.py  market_signal_item.py  open_position_result.py  position_metrics.py  push_notification_item.py  risk_management_item.py  signal_parametrization_item.py  signals_evaluation_result.py  tracked_crypto_currency_item.py  trade_now_hints.py
src/crypto_futures_bot/infrastructure/config/: container.py
src/crypto_futures_bot/infrastructure/database/: __init__.py  alembic.py
src/crypto_futures_bot/infrastructure/services/: auto_trader_crypto_currency_service.py  auto_trader_event_handler_service.py  crypto_technical_analysis_service.py  market_signal_service.py  orders_analytics_service.py  push_notification_service.py  risk_management_service.py  signal_parametrization_service.py  tracked_crypto_currency_service.py  trade_now_service.py
src/crypto_futures_bot/infrastructure/tasks/: base.py  signals_task_service.py  task_manager.py
src/crypto_futures_bot/interfaces/config/: container.py
src/crypto_futures_bot/interfaces/telegram/: enums.py
src/crypto_futures_bot/scripts/: cli.py  config.py  jobs.py  services.py  strategy.py  vo.py
tests/: conftest.py
tests/helpers/: constants.py
tests/infrastructure/services/: auto_trader_crypto_currency_service_test.py  auto_trader_event_handler_service_test.py  crypto_technical_analysis_service_test.py  market_signal_service_test.py  orders_analytics_service_test.py  push_notification_service_test.py  risk_management_service_test.py  signal_parametrization_service_test.py  tracked_crypto_currency_service_test.py  trade_now_service_test.py
tests/infrastructure/tasks/: signals_task_service_test.py
(+102 files in other folders)
