[project]
name = "crypto-futures-bot"
version = "0.6.3"
description = "Crypto futures bot"
readme = "README.md"
authors = [
    { name = "José María Sola Durán", email = "josemaria.sola.duran@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiogram-dialog>=2.4.0",
    "aiogram3-form>=2.0.5",
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "apscheduler>=3.11.1",
    "backoff>=2.2.1",
    "ccxt>=4.5.24",
    "dependency-injector>=4.48.2",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.12.0",
    "pydash>=8.0.5",
    "pyee>=13.0.0",
    "sqlalchemy>=2.0.44",
    "ta>=0.11.0",
    "tomli>=2.3.0",
]

[tool.taskipy.tasks]
start = "python -m crypto_futures_bot.main"
test = "pytest -x --log-cli-level=INFO"
"test:coverage" = "pytest --cov=./src --cov-report=term --cov-report=xml --log-cli-level=INFO"
"test:coverage:html" = "pytest --cov=./src --cov-report=term --cov-report=html --log-cli-level=INFO"
lint = "pre-commit install && pre-commit run --all"
"make-migrations" = "alembic revision --autogenerate"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "backtesting>=0.6.5",
    "faker>=38.2.0",
    "joblib>=1.5.3",
    "pre-commit>=4.5.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-httpserver>=1.1.3",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.7",
    "taskipy>=1.14.1",
    "tqdm>=4.67.1",
    "ty>=0.0.7",
    "typer>=0.20.0",
]

[project.scripts]
cli = "crypto_futures_bot.scripts.cli:app"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "I",    # isort
    "UP",   # pyupgrade
    "E501", # Add the `line-too-long` rule to the enforced rule set.
    "T201", # Remove print statements
]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 10.
max-complexity = 10

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
log_cli_level = "INFO"
asyncio_mode = "auto"
python_functions = "should_* test_*"

[tool.coverage.run]
source = ["src"]
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
show_missing = true
fail_under = 90
